<resources>
    <string name="app_name">ManageXPence</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="removeAds">Remove Ads</string>
    <string name="descriptions">House Rent,Shopping,SuperMarket,Travel,Mortgage,Council Tax,House Bills,Entertainment</string>

    <string-array name="descriptions">
        <item>House Rent</item>
...
    <string name="title_activity_budget">BudgetActivity</string>
    <string name="title_activity_calculate_annual_expenses">CalculateAnnualExpensesActivity</string>
    <string name="maxbudgetvalue">2000</string>
    <string name="action_previous">Previous</string>
    <string name="action_next">Next</string>
    <string name="APP_KEY">h5x1321simc1oxm</string>
    <string name="sign_in">Sign in</string>
    <string name="leftYearButton">Left Year Button</string>
    <string name="rightYearButton">Right Year Button</string>
    <string name="income">Income</string>

    <string name="slide_page">Welcome to ManageXPence "\n\n"
         <u> <font color="blue"> ADD AN EXPENSE </font> </u> "\n"
...
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="add_an_expense">Add an Expense:</string>
    <string name="expense_amount">Amount</string>
    <string name="expense_description">Description</string>
    <string name="add">Add</string>
    <string name="select_date">Select Date</string>
    <string name="end_date">End Date</string>
    <string name="save_to_file">Save To File</string>
    <string name="add_your_income">Add your income:</string>
    <string name="enter_your_income">Enter your income:</string>
    <string name="income_circle">Income Circle</string>
    <string name="balance">Balance:</string>
    <string name="edit_an_expense">Edit an expense:</string>
    <string name="add_expenses_using_date_range">Add expenses using date range:</string>
    <string name="sum_expenses">Sum expenses</string>
    <string name="enter_date_range">Enter date range</string>
    <string name="show_a_report_of_your_expenses">Show a report of your Expenses:</string>
    <string name="report">Report</string>
    <string name="budget_warnings">Budget Warnings:</string>
    <string name="budget_control">Budget Control</string>
    <string name="backup">BackUp:</string>
    <string name="export">Export</string>
    <string name="importexpenses">Import</string>
    <string name="show_a_pie_chart_with_your_expenses">Show a Pie Chart with your Expenses:</string>
    <string name="pie_chart">Pie Chart</string>
    <string name="show_a_barchart_with_your_expenses">Show a BarChart with your Expenses:</string>
    <string name="bar_chart">Bar Chart</string>
    <string name="show_an_annual_chart_with_your_expenses">Show an Annual Chart with your Expenses:</string>
    <string name="annual_chart">Annual Chart</string>
    <string name="show_a_savings_chart">Show a Savings Chart:</string>
    <string name="savings_chart">Savings Chart</string>
    <string name="export_to_dropbox">Export to DROPBOX</string>
    <string name="export_txt">Export TXT</string>
    <string name="export_pdf">Export PDF</string>
    <string name="add_or_remove_a_description">ADD or REMOVE a Description</string>
    <string name="enter_text_here">Enter text here..</string>
    <string name="salary_day">Salary Day</string>
    <string name="to_current">To Current:</string>
    <string name="PATH_TO_EXPORT_EXPENSES">/data/data/uk.co.irokottaki.moneycontrol/files/expenses.txt</string>

...
