<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/budgetView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
...
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/budgetBar"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="37dp"
        android:layout_alignRight="@+id/textView2"
        android:layout_alignEnd="@+id/textView2"
        android:layout_toRightOf="@+id/textView3"
        android:layout_toEndOf="@+id/textView3" />
...
        android:layout_toRightOf="@+id/budgetBar"
        android:layout_toEndOf="@+id/budgetBar" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/infoBudgetButton"
        tools:ignore="contentDescription"
        android:layout_alignParentTop="true"
        android:src="@drawable/ic_info_outline_black_24dp"
        android:background="#0000"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
...
